docs/versioned_docs/version-1.0.0/reference/utils.mdx
<!-- Generated by port_legacy_docs.py v2 from v1.0.0 (bf7e0a1f64f06a47f2de0e57d63b32d660051631). Historical snapshot—do not edit directly. -->

<a id="utilities"></a>
# Utilities

### coerce_to_list {#utils.coerce_to_list}

**Function**

```python
coerce_to_list(object_or_objects: Union[T, List[T]], class_: Union[Any, List[Any]], allow_none: bool = False, min_size: Optional[int] = None, max_size: Optional[int] = None) -> List[T]
```

<div className="api-docstring">

Takes and object or list of objects and validates its contents, ensuring that the
resulting object is a list.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `object_or_objects` | `Union[T, List[T]]` | the Python object or objects to validate and convert to a list. |
| `class_` | `Union[Any, List[Any]]` | the Python type (or class) of objects expected in the list. |
| `allow_none` | `bool` | whether or not None is a valid input (and thus output) option. |
| `min_size` | `Optional[int]` | if provided, the length of `object_or_objects` cannot be smaller than this. |
| `max_size` | `Optional[int]` | if provided, the length of `object_or_objects` cannot be larger than this. |

#### Returns

| Type | Description |
| --- | --- |
| `List[T]` | `object_or_objects` if it was a valid list, `[object_or_objects]` if it was a valid<br />object, or `None` if provided and allowed. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the validation checks fail. |

</div>

### is_hex {#utils.is_hex}

**Function**

```python
is_hex(string: str) -> bool
```

<div className="api-docstring">

Determines whether a given string is a valid hexadecimal number.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `string` | `str` | the string to examine for hex characters. |

#### Returns

| Type | Description |
| --- | --- |
| `bool` | `True` if the string is a valid hexadecimal number, otherwise `False`. |

</div>

### validate_action_id {#utils.validate_action_id}

**Function**

```python
validate_action_id(action_id: str, allow_none: bool = False) -> Optional[str]
```

<div className="api-docstring">

Action IDs are used in the handing of user interactivity within Slack blocks.
This function checks that a given `action_id` is valid as per the requirements
imposed by the Slack API.

See: [https://api.slack.com/interactivity/handling](https://api.slack.com/interactivity/handling)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | the action_id string to validate for correctness as per the Slack API. |
| `allow_none` | `bool` | whether to accept `None` as a valid value for `action_id`. |

#### Returns

| Type | Description |
| --- | --- |
| `Optional[str]` | The original value `action_id` if all validation checks pass. |

</div>

### validate_int {#utils.validate_int}

**Function**

```python
validate_int(num: Union[int, None], min_value: Optional[int] = None, max_value: Optional[int] = None, allow_none: bool = False) -> int
```

<div className="api-docstring">

Performs basic validation checks against a given integer.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `num` | `Union[int, None]` | the number to validate. |
| `min_value` | `Optional[int]` | if `num` is less than this value, an error will be thrown. |
| `max_value` | `Optional[int]` | if `num` is greater than this value, an error will be thrown. |
| `allow_none` | `bool` | whether `None` is a valid value for `num`. If `num` is `None`<br />`allow_none` is `False`, an error will be thrown. |

#### Returns

| Type | Description |
| --- | --- |
| `int` | The original value of `num` if it passes all validation checks. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the validation checks fail. |

</div>

### validate_string {#utils.validate_string}

**Function**

```python
validate_string(string: Optional[str], field_name: str, max_length: Optional[int] = None, min_length: Optional[int] = None, allow_none: bool = False) -> Optional[str]
```

<div className="api-docstring">

Performs basic validation actions (e.g. length checking) on a given string
based on the provided criteria.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `string` | `Optional[str]` | the string to validate |
| `field_name` | `str` | the name of the field the string belongs to (for error reporting purposes). |
| `min_length` | `Optional[int]` | if the string is less than this length, an error will be raised. |
| `max_length` | `Optional[int]` | if the string is greated than this length, an error will be raised. |
| `allow_none` | `bool` | whether `None` is a valid value for the string being validated. |

#### Returns

| Type | Description |
| --- | --- |
| `Optional[str]` | The original string if it deemed to be valid (i.e. no errors are thrown). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the validation checks (length, `None`) fail. |

</div>
